[project]
name = "iaptoolkit-cli"
version = "0.0.2"
description = "Command-Line Interface for iaptoolkit"
authors = [
    {name = "Rob Voigt", email = "code@ravoigt.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
repository = "https://github.com/RAVoigt/iaptoolkit-cli"
homepage = "https://github.com/RAVoigt/iaptoolkit-cli"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ================================
# Tools etc.
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

# ================================
# Dependencies
[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
flask = "^3.0.3"

cleo = "^2.1.0"
typehints-cleo2 = "^1.0.0"

kvcommon = "^0.2.4"
iaptoolkit = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "*"
ipdb = "*"
ipython = "*"
mock = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-socket = "*"
pyfakefs = "^5.3.2"
